    - Disable -Wtautological-constant-out-of-range-compare (for clang).
    - Check the availability of -W<warning> variant instead of -Wno-<warning>.
      As at least gcc and clang do not warn on -Wno-* warning flags, only
      when some unrelated warning needs to be emitted.
    - Bump po4a version to 0.43 (we are using --porefs wrap option).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Sun, 31 Jul 2016 16:33:01 +0200

dpkg (1.18.10) unstable; urgency=medium

  [ Guillem Jover ]
  * Fix a short-lived memory leak in dpkg archive argument parsing.
  * When activating file triggers on conffile purge, use the conffile name
    instead of the real pathname it might refer to. This fixes a segfault
    when using --instdir, or when the conffile has been moved around and
    replaced with a symlink to the target.
    Regression introduced in dpkg 1.18.8. Closes: #830267
  * Perl modules:
    - Disable fixdebugpath feature on unsafe characters in the path.
    - Generate reproducible source tarballs by using the new GNU tar
      --clamp-mtime option in Dpkg::Source::Archive, to make sure no file
      in source packages has an mtime later than the changelog entry time.
    - Enable fixdebugpath build flag feature by default.
      Thanks to Mattia Rizzolo <mattia@debian.org>. Closes: #832179
    - Rename various private methods and functions with an underscore prefix
      and unified names.
    - Refactor perl modules directory list into a new function in Test::Dpkg.
  * Test suite:
    - Add new POD coverage author test for public perl modules.
  * Documentation:
    - Document Testsuite-Triggers in dsc(5).
    - Fix deb-changes(5) description to talk about .changes instead of .dsc.
      Reported by HW42 <hw42@ipsumj.de>.
    - Use debian/control as the SYNOPSIS in deb-src-control(5).
    - Add new deb-conffiles(5) man page.
    - Add references to deb-control(5) and deb-triggers(5) in dpkg(1).