@@ -16,6 +16,7 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
       As at least gcc and clang do not warn on -Wno-* warning flags, only
       when some unrelated warning needs to be emitted.
     - Bump po4a version to 0.43 (we are using --porefs wrap option).
+    - Add support for running the test suite in parallel.
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
